gnome-software (3.27.92-1) UNRELEASED; urgency=medium

  * New upstream release candidate
  * Update gsettings schema names for new release ("sources" renamed to
    "repos")
  * Depend on libgtk3-perl for debconf's GNOME backend

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 20 Feb 2018 17:15:24 -0500

gnome-software (3.27.90-1) experimental; urgency=medium

  * New upstream development release
  * Bump dependencies for new version:
    - libappstream-glib-dev (>= 0.7.3), libfwupd (>= 0.9.8),
      libgtk-3-dev (>= 3.22.4)
  * Build-Depend on libgspell-1-dev instead of libgtkspell3-3-dev
  * debian/docs: Install README.md

 -- Jeremy Bicha <jbicha@debian.org>  Sun, 18 Feb 2018 16:27:18 -0500

gnome-software (3.26.5-1) unstable; urgency=medium

  * New upstream release
  * Update Vcs fields for migration to https://salsa.debian.org/
  * Bump debhelper compat to 11

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 20 Jan 2018 07:48:06 -0500

gnome-software (3.26.3-4) unstable; urgency=medium

  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2
  * Stop using appdata-to-NEWS to install NEWS. It's no longer needed.
  * Add some Multi-Arch metadata

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 16 Dec 2017 13:24:18 -0500

gnome-software (3.26.3-3) unstable; urgency=medium

  * Fix arch:all build

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 24 Nov 2017 19:57:28 -0500

gnome-software (3.26.3-2) unstable; urgency=medium

  * Only build snap plugin on architectures where snapd is built.

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 24 Nov 2017 16:31:19 -0500

gnome-software (3.26.3-1) unstable; urgency=medium

  * New upstream release
  * Use appstream-util appdata-to-news to install NEWS
  * Build gnome-software-plugin-snap again (Closes: #877684)

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 21 Nov 2017 19:19:28 -0500

gnome-software (3.26.2-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in: