@@ -17,20 +17,20 @@ Build-Depends: appstream,
                intltool (>= 0.35.0),
                libappstream-glib-dev (>= 0.7.3),
                libflatpak-dev (>= 0.6.12) [linux-any],
-               libfwupd-dev (>= 0.9.8) [amd64 arm64 armhf i386],
+               libfwupd-dev (>= 1.0.3) [amd64 arm64 armhf i386],
                libglib2.0-dev (>= 2.46),
-               libgnome-desktop-3-dev (>= 3.18),
+               libgnome-desktop-3-dev (>= 3.18.0),
                libgtk-3-dev (>= 3.22.4),
                libgspell-1-dev,
                libgudev-1.0-dev [linux-any],
-               libjson-glib-dev,
+               libjson-glib-dev (>= 1.2.0),
                liblimba-dev (>= 0.5.6) [linux-any],
                liboauth-dev,
                libpackagekit-glib2-dev (>= 1.1.4),
                libpolkit-gobject-1-dev,
                libsecret-1-dev,
                libsnapd-glib-dev (>= 1.19) [amd64 arm64 armel armhf i386 ppc64 ppc64el s390x],
-               libsoup2.4-dev (>= 2.52),
+               libsoup2.4-dev (>= 2.52.0),
                libsqlite3-dev,
                libxml2-utils,
                meson (>= 0.37),
